[package]
name = "buff_value"
version = "0.1.1"
edition = "2024"
description = "Oficial Version of a Simple library to calculate the value of a given investment"
authors = ["Viero19G <gabrielviero22@gmail.com>"]
repository = "https://github.com/Viero19G/buff_value.git"
readme = "README.md"
license = "MIT"
keywords = [
    "improvement","financials","investment"
]

[dependencies]
